--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Echo Transcript">
         <meta property="og:description" content="Echo Transcript - Play back what you speak, and transcript into text using the Web Speech API.">
+        <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="apple-touch-icon" href="/images/icons/logo-512.png">
     </head>
     <body>
