fine tuning the service working (#3)
* add apple icon

* update start url

* hide address bar

* defensive handling

* defensive handling

* defensive handling

* defensive handling

* defensive handling

* update cache rules

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <head>
         <title>Echo Transcript</title>
-        <!-- <link rel="stylesheet" href="./index.css"> -->
         <meta property="og:url" content="https://skychen.com/echotranscript.html">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Echo Transcript">
         <meta property="og:description" content="Echo Transcript - Play back what you speak, and transcript into text using the Web Speech API.">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <link rel="apple-touch-icon" href="/images/icons/logo-512.png">
     </head>
     <body>
         <h1>Echo Transcript</h1>
