update description tag

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Echo Transcript</title>
+    <meta name='description' content='Echo Transcript - Play back what you speak, and transcript into text using the Web Speech API. Improve your pronunciation by echo what you said.'>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta charset="utf-8" />
     <meta property="og:url" content="https://skychen.com/">
+    <link rel="canonical" href="https://skychen.com">
+    <meta name="theme-color" content="#1976D2">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Echo Transcript">
-    <meta property="og:description" content="Echo Transcript - Play back what you speak, and transcript into text using the Web Speech API.">
+    <meta property="og:description" content="Echo Transcript - Play back what you speak, and transcript into text using the Web Speech API. Improve your pronunciation by echo what you said.">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="manifest" href="/manifest.json">
     <link rel="apple-touch-icon" href="/images/icons/logo-512.png">
-    <title>Echo Transcript</title>
   </head>
 
   <body>
