--- a/src/index_bk.html
+++ b/src/index_bk.html
@@ -1,7 +1,7 @@
 <html>
     
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
         <title>Echo Transcript</title>
         <meta property="og:url" content="https://skychen.com/">
         <meta property="og:type" content="website">
