--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Echo Transcript</title>
     <meta name='description' content='Echo Transcript - Play back what you speak, and transcript into text using the Web Speech API. Improve your pronunciation by echo what you said.'>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <meta property="og:url" content="https://skychen.com/">
     <link rel="canonical" href="https://skychen.com">
