--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,14 @@
 
   <body>
     <div id="app"></div>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7Z21325S30"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-7Z21325S30');
+    </script>
   </body>
 </html>
