--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Echo Transcript</title>
-    <meta name='description' content='Echo Transcript - Play back what you speak, and transcript into text using the Web Speech API. Improve your pronunciation by echo what you said.'>
+    <meta name='description' content='Echo Transcript - Talk to chatGPT. Play back what you speak, and transcript into text using the Web Speech API. Improve your pronunciation by echo what you said.'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <meta property="og:url" content="https://skychen.com/">
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#1976D2">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Echo Transcript">
-    <meta property="og:description" content="Echo Transcript - Play back what you speak, and transcript into text using the Web Speech API. Improve your pronunciation by echo what you said.">
+    <meta property="og:description" content="Echo Transcript - Talk to chatGPT.  Play back what you speak, and transcript into text using the Web Speech API. Improve your pronunciation by echo what you said.">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="manifest" href="/manifest.json">
