talk to gpt (#13)
* use express

* gzip

* remvoe shrink-to-fit

* update index.html

* talk to gpt

* assign voice

* get voice

* precache url

* add voice support

* add voice support

* add voice support

* add voice support

* bug fix

* bug fix

* bug fix

* add model selection

* refactor the lang select

* default to better model

* update sw

* refactor

* add test button

* user lang

* remove voices code

* no playback

* remove playback

* add voice

* stop recogn

* set voice

* ui enhancement

* only set voices for non-en

* fine tune on start

* fine tune on start

* fine tune on start

* add google analytics

* fix lint warning

* fine tune the wording

* update description

--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <title>Echo Transcript</title>
-    <meta name='description' content='Echo Transcript - Play back what you speak, and transcript into text using the Web Speech API. Improve your pronunciation by echo what you said.'>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name='description' content='The Echo Transcript feature allows you to interact with chatGPT in a novel way. Simply speak into the app and the Web Speech API will transcribe your spoken words into text. You can also listen back to your own speech, allowing you to improve your pronunciation and communication skills. This feature is seamlessly integrated with chatGPT, enabling you to have an engaging conversation with the AI.'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <meta property="og:url" content="https://skychen.com/">
     <link rel="canonical" href="https://skychen.com">
     <meta name="theme-color" content="#1976D2">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Echo Transcript">
-    <meta property="og:description" content="Echo Transcript - Play back what you speak, and transcript into text using the Web Speech API. Improve your pronunciation by echo what you said.">
+    <meta property="og:description" content="The Echo Transcript feature allows you to interact with chatGPT in a novel way. Simply speak into the app and the Web Speech API will transcribe your spoken words into text. You can also listen back to your own speech, allowing you to improve your pronunciation and communication skills. This feature is seamlessly integrated with chatGPT, enabling you to have an engaging conversation with the AI.">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="manifest" href="/manifest.json">
@@ -19,5 +19,14 @@
 
   <body>
     <div id="app"></div>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7Z21325S30"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-7Z21325S30');
+    </script>
   </body>
 </html>
