--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
         gtag('js', new Date());
 
         gtag('config', 'G-7Z21325S30');
+        window.gtag = window.gtag || gtag;
     </script>
   </body>
 </html>
