handle navigation while playing and add custom metrics (#15)
* add event

* handle navigation while playing

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Echo Transcript</title>
-    <meta name='description' content='The Echo Transcript feature allows you to interact with chatGPT in a novel way. Simply speak into the app and the Web Speech API will transcribe your spoken words into text. You can also listen back to your own speech, allowing you to improve your pronunciation and communication skills. This feature is seamlessly integrated with chatGPT, enabling you to have an engaging conversation with the AI.'>
+    <meta name='description' content='The Echo Transcript feature is seamlessly integrated with chatGPT, enabling you to have an engaging conversation with the AI. Simply speak into the app and the Web Speech API will transcribe your spoken words into text. You can also listen back to your own speech, allowing you to improve your pronunciation and communication skills.'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <meta property="og:url" content="https://skychen.com/">
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#1976D2">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Echo Transcript">
-    <meta property="og:description" content="The Echo Transcript feature allows you to interact with chatGPT in a novel way. Simply speak into the app and the Web Speech API will transcribe your spoken words into text. You can also listen back to your own speech, allowing you to improve your pronunciation and communication skills. This feature is seamlessly integrated with chatGPT, enabling you to have an engaging conversation with the AI.">
+    <meta property="og:description" content="The Echo Transcript feature is seamlessly integrated with chatGPT, enabling you to have an engaging conversation with the AI. Simply speak into the app and the Web Speech API will transcribe your spoken words into text. You can also listen back to your own speech, allowing you to improve your pronunciation and communication skills.">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="manifest" href="/manifest.json">
@@ -27,6 +27,7 @@
         gtag('js', new Date());
 
         gtag('config', 'G-7Z21325S30');
+        window.gtag = window.gtag || gtag;
     </script>
   </body>
 </html>
