--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Echo Transcript</title>
-    <meta name='description' content='The Echo Transcript feature is seamlessly integrated with chatGPT, enabling you to have an engaging conversation with the AI. Simply speak into the app and the Web Speech API will transcribe your spoken words into text. You can also listen back to your own speech, allowing you to improve your pronunciation and communication skills.'>
+    <title>Echo Scribe</title>
+    <meta name='description' content='The Echo Scribe feature is seamlessly integrated with chatGPT, enabling you to have an engaging conversation with the AI. Simply speak into the app and the Web Speech API will transcribe your spoken words into text. You can also listen back to your own speech, allowing you to improve your pronunciation and communication skills.'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <meta property="og:url" content="https://skychen.com/">
     <link rel="canonical" href="https://skychen.com">
     <meta name="theme-color" content="#1976D2">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Echo Transcript">
-    <meta property="og:description" content="The Echo Transcript feature is seamlessly integrated with chatGPT, enabling you to have an engaging conversation with the AI. Simply speak into the app and the Web Speech API will transcribe your spoken words into text. You can also listen back to your own speech, allowing you to improve your pronunciation and communication skills.">
+    <meta property="og:title" content="Echo Scribe">
+    <meta property="og:description" content="The Echo Scribe feature is seamlessly integrated with chatGPT, enabling you to have an engaging conversation with the AI. Simply speak into the app and the Web Speech API will transcribe your spoken words into text. You can also listen back to your own speech, allowing you to improve your pronunciation and communication skills.">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="manifest" href="/manifest.json">
