--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,13 @@
   <body>
     <div id="app"></div>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7Z21325S30"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2ZX9L90Q08"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-7Z21325S30');
+        gtag('config', 'G-2ZX9L90Q08');
         window.gtag = window.gtag || gtag;
     </script>
   </body>
